<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".difficultySelector">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-38dp"
        tools:layout_editor_absoluteY="119dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btn_facile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:onClick="startNiveauFacile"
                android:text="@string/facile" />

            <Button
                android:id="@+id/btn_difficile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:enabled="false"
                android:onClick="startNiveauDifficile"
                android:text="@string/difficile" />

            <Button
                android:id="@+id/btn_expert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:enabled="false"
                android:onClick="startNiveauExpert"
                android:text="@string/expert" />

            <Button
                android:id="@+id/btn_chrono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:enabled="false"
                android:onClick="startNiveauChrono"
                android:text="@string/chrono" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>