<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".difficultyStart">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="3"
        app:rowCount="5"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView
            android:id="@+id/tv_niveau"
            android:text="@string/niveau"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            android:gravity="center"/>


        <TextView
            android:id="@+id/tv_vies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vies"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_haut_haut"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            android:layout_margin="15dp"
            android:visibility="invisible"
            android:backgroundTint="@color/my_brown"/>
        <Button
            android:id="@+id/btn_haut"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:layout_margin="15dp"
            android:backgroundTint="@color/my_yellow"/>

        <Button
            android:id="@+id/btn_haut_gauche"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:layout_margin="15dp"
            android:visibility="invisible"
            android:backgroundTint="@color/my_orange"/>

        <Button
            android:id="@+id/btn_haut_droit"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:layout_margin="15dp"
            android:visibility="invisible"
            android:backgroundTint="@color/my_violet" />

        <Button
            android:id="@+id/btn_gauche"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            android:layout_margin="15dp"
            android:backgroundTint="@color/my_red" />

        <Button
            android:id="@+id/btn_bas_gauche"
            android:layout_margin="15dp"
            android:backgroundTint="@color/my_pink"
            android:visibility="invisible"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn_bas_droit"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"
            android:layout_margin="15dp"
            android:visibility="invisible"
            android:backgroundTint="@color/my_blue_green" />


        <Button
            android:id="@+id/btn_droit"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            android:layout_margin="15dp"
            android:backgroundTint="@color/my_blue"/>

        <Button
            android:id="@+id/btn_bas"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"
            android:layout_margin="15dp"
            android:backgroundTint="@color/my_green"/>

        <Button
            android:id="@+id/btn_bas_bas"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1"
            android:layout_margin="15dp"
            android:visibility="invisible"
            android:backgroundTint="@color/my_grey" />

        <TextView
            android:id="@+id/tv_pointsManche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1"
            android:gravity="center" />

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>